tests/errors/array_constructor_with_different_types.f90
program array_constructor_with_different_types
    print *, [1, 2.]
end program
